--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ repositories {
         name = 'worldguard'
         url = 'https://maven.enginehub.org/repo/'
     }
+    maven {
+        url = 'https://repo.rosewooddev.io/repository/public/'
+    }
 }
 
 dependencies {
@@ -44,6 +47,7 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.11.0'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.7'
+    compileOnly 'org.black_ixx:playerpoints:3.2.5'
 }
 
 def targetJavaVersion = 17
