--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
 }
 
@@ -10,6 +11,10 @@ repositories {
     maven {
         name = 'spigotmc-repo'
         url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+    }
+    maven {
+        name = 'iridiumdevelopment'
+        url = 'https://nexus.iridiumdevelopment.net/repository/maven-releases/'
     }
     maven {
         name = 'sonatype'
@@ -41,13 +46,21 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
-    compileOnly 'com.github.LoneDev6:api-itemsadder:3.0.0'
-    compileOnly 'de.tr7zw:item-nbt-api-plugin:2.10.0'
-    compileOnly 'me.clip:placeholderapi:2.11.0'
+    compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
+    compileOnly 'com.github.LoneDev6:api-itemsadder:3.2.5'
+    compileOnly 'de.tr7zw:item-nbt-api-plugin:2.11.1'
+    compileOnly 'me.clip:placeholderapi:2.11.2'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.7'
     compileOnly 'org.black_ixx:playerpoints:3.2.5'
+    implementation 'com.iridium:IridiumColorAPI:1.0.6'
+}
+
+shadowJar {
+    dependencies {
+        include dependency('com.iridium:IridiumColorAPI:1.0.6')
+        include dependency('de.tr7zw:item-nbt-api-plugin:2.11.1')
+    }
 }
 
 def targetJavaVersion = 17
